Basic scrolling added, fixed overflow issues

--- a/src/index.sass
+++ b/src/index.sass
@@ -24,4 +24,4 @@
 
 @layer components
   .button
-    @apply rounded-md text-white bg-neutral-700 py-2 px-4 min-h-[42px] min-w-[42px]
+    @apply rounded-md text-white bg-neutral-800 py-2 px-4 min-h-[42px] min-w-[42px]
